Fix image overlap problem with expanded preview

--- a/public/css/component.css
+++ b/public/css/component.css
@@ -56,6 +56,7 @@
 	text-align: left;
 	height: 0;
 	overflow: hidden;
+  z-index: 1;
 }
 
 .og-expander-inner {
